Subfolder per test-case-folder.